--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -18,7 +18,7 @@
       </ul>
     </div>
     <div class="footer__right">
-      <a href="https://radity.com/"
+      <a href="https://rabbani.net.au/"
         ><img
           src="{{ .Site.Params.footer.radity_logo.x | absURL }}"
           srcset="{{ .Site.Params.footer.radity_logo.x | absURL }} 1x, {{ .Site.Params.footer.radity_logo._2x | absURL }} 2x"
