--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,13 +1,19 @@
 <header class="header fixed-top rad-animation-group" id="header">
   <div class="container rad-fade-in">
+    <img
+    class="img-responsive"
+    src="img/logo-dark.png"
+    srcset="img/logo-dark.png 1x, img/logo-dark.png 2x"
+    alt="Header Logo"
+    />
     <nav class="navbar navbar-expand-lg navbar-light p-0">
       <a class="navbar-brand" href="{{ .Site.BaseURL | absURL }}">
         <span>{{ .Site.Params.logo.text1 }}</span>
         <span>{{ .Site.Params.logo.text2 }}</span>
-        <!-- <img
+       <!-- <img
           class="img-responsive"
           src="img/logo-dark.png"
-          srcset="img/logo-dark.png 1x, img/logo-dark@2x.png 2x"
+          srcset="img/logo-dark.png 1x, img/logo-dark.png 2x"
           alt="Header Logo"
         /> -->
       </a>
