--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,8 +2,8 @@
   <div class="container rad-fade-in">
     <img
     class="img-responsive"
-    src="img/logo-dark.png"
-    srcset="img/logo-dark.png 1x, img/logo-dark.png 2x"
+    src="img/logo-dark-2x.png"
+    srcset="img/logo-dark-2x.png 1x, img/logo-dark-2x.png 2x"
     alt="Header Logo"
     />
     <nav class="navbar navbar-expand-lg navbar-light p-0">
